--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
-    - assets/images/11.png
+    - images/
+    - images/11.png
     - assets/Lang/ar.json
     - assets/Lang/en.json
 
@@ -94,11 +94,12 @@ flutter:
         - asset: lib/fonts/English/SourceSansPro-Regular.ttf
         - asset: lib/fonts/English/SourceSansPro-SemiBold.ttf
         - asset: lib/fonts/English/SourceSansPro-SemiBoldItalic.ttf
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - family: Almarai
+      fonts:
+        - asset: lib/fonts/Arabic/Almarai-Bold.ttf
+        - asset: lib/fonts/Arabic/Almarai-ExtraBold.ttf
+        - asset: lib/fonts/Arabic/Almarai-Light.ttf
+        - asset: lib/fonts/Arabic/Almarai-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
